# eliseuv.github.io

./: .gitignore  config.toml  flake.nix  index.html  old_style.css  robots.txt  search_index.en.js  sitemap.xml  style.css  styles.css  styles.css.map  styles.scss
.github/workflows/: deploy.yml
blog/: index.html
content/: _index.md
content/blog/: _index.md
content/resume/: content.yml
content/simulations/: _index.md  test.md
highlight_themes/: tokyo-night.tmTheme
projects/: index.html
projects/simulation/: index.html
resume/: content.yml  index.html
sass/: _base.scss  _components.scss  _resume.scss  _variables.scss  style.scss
simulations/: Cargo.toml  index.html
simulations/src/: lib.rs
simulations/test/: index.html
templates/: base.html  blog_page.html  blog_section.html  business_card.html  index.html  page.html  resume.html  section.html
templates/icons/: book.html  download.html  github.html  linkedin.html  mail.html  orcid.html  researchgate.html
wasm/: spinning_cube.js
